# too-many-cells

./: Dockerfile  Dockerfile_deprecated  README.html  README.org  default.nix  docker.nix  index.html  sc-cluster.cabal  stack.yaml  stack.yaml.preV2  too-many-cells.cabal
app/: Main.hs
src/: Adjacency.hs  Clumpiness.hs  Cluster.hs  Load.hs  Plot.hs  Preprocess.hs  Types.hs  Utility.hs
src/R/: heatmap.R
src/TooManyCells/Classify/: .#Load.hs  Classify.hs  Types.hs
src/TooManyCells/Differential/: Differential.hs  Types.hs
src/TooManyCells/Diversity/: Diversity.hs  Load.hs  Plot.hs  Types.hs
src/TooManyCells/File/: Types.hs
src/TooManyCells/MakeTree/: Adjacency.hs  Clumpiness.hs  Cluster.hs  Load.hs  Plot.hs  Preprocess.hs  Print.hs  Types.hs  Utility.hs
src/TooManyCells/Matrix/: AtacSeq.hs  Load.hs  Preprocess.hs  Types.hs  Utility.hs
src/TooManyCells/Motifs/: FindMotif.hs  Types.hs
src/TooManyCells/Paths/: Distance.hs  Plot.hs  Types.hs
src/TooManyCells/Peaks/: ClusterPeaks.hs  Types.hs
src/TooManyCells/Program/: Classify.hs  Differential.hs  Diversity.hs  Interactive.hs  LoadMatrix.hs  MakeTree.hs  MatrixOutput.hs  Motifs.hs  Options.hs  Paths.hs  Peaks.hs  Spatial.hs  Utility.hs
src/TooManyCells/Spatial/: AnnoSpat.hs  PointProcess.hs  ProjectionPlot.hs  Relationships.hs  SummaryPlot.hs  Types.hs  Utility.hs
too-many-peaks_doc/: too-many-peaks.html  too-many-peaks.org
workshop/: clusters.csv  clusters_pruned.csv  index.html  index.org  labels.csv  workshop.html  workshop.org
workshop/out_pruned/: clumpiness.csv  cluster_diversity.csv  cluster_info.csv  cluster_list.json  cluster_tree.json  graph.dot  node_info.csv
