name:                too-many-cells
version:             0.2.2.2
synopsis:            Cluster single cells and analyze cell clade relationships.
description:         Different methods to cluster and analyze single cell data with diversity indices and differential expression.
homepage:            http://github.com/GregorySchwartz/too-many-cells#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@pennmedicine.upenn.edu
copyright:           2019 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TooManyCells.Diversity.Diversity
                     , TooManyCells.Differential.Differential
                     , TooManyCells.Differential.Types
                     , TooManyCells.Diversity.Load
                     , TooManyCells.Diversity.Plot
                     , TooManyCells.Diversity.Types
                     , TooManyCells.File.Types
                     , TooManyCells.MakeTree.Adjacency
                     , TooManyCells.MakeTree.Clumpiness
                     , TooManyCells.MakeTree.Cluster
                     , TooManyCells.MakeTree.Load
                     , TooManyCells.MakeTree.Plot
                     , TooManyCells.MakeTree.Print
                     , TooManyCells.MakeTree.Types
                     , TooManyCells.Matrix.AtacSeq
                     , TooManyCells.Matrix.Load
                     , TooManyCells.Matrix.Preprocess
                     , TooManyCells.Matrix.Types
                     , TooManyCells.Matrix.Utility
                     , TooManyCells.Paths.Distance
                     , TooManyCells.Paths.Plot
                     , TooManyCells.Paths.Types
                     , TooManyCells.Peaks.ClusterPeaks
                     , TooManyCells.Peaks.Types
                     , TooManyCells.Program.Options
                     , TooManyCells.Program.LoadMatrix
                     , TooManyCells.Program.MakeTree
                     , TooManyCells.Program.Interactive
                     , TooManyCells.Program.Differential
                     , TooManyCells.Program.Diversity
                     , TooManyCells.Program.Paths
                     , TooManyCells.Program.Peaks
                     , TooManyCells.Program.Utility
  build-depends:       base >= 4.7 && < 5
                     , SVGFonts
                     , aeson
                     , async-pool
                     , attoparsec
                     , birch-beer
                     , bytestring
                     , cassava
                     , colour
                     , containers
                     , deepseq
                     , diagrams
                     , diagrams-cairo
                     , diagrams-graphviz
                     , diagrams-lib
                     , differential
                     , directory
                     , diversity
                     , fgl
                     , filepath
                     , find-clumpiness
                     , foldl
                     , graphviz
                     , hashable
                     , hierarchical-clustering
                     , hierarchical-spectral-clustering
                     , hmatrix
                     , inline-r
                     , lens
                     , managed
                     , matrix-market-attoparsec
                     , modularity
                     , mtl
                     , optparse-generic
                     , palette
                     , parallel
                     , plots
                     , process
                     , resourcet
                     , safe
                     , scientific
                     , sparse-linear-algebra
                     , spectral-clustering >= 0.3.0.2
                     , split
                     , statistics
                     , stm
                     , streaming
                     , streaming-bytestring
                     , streaming-cassava
                     , streaming-commons
                     , streaming-utils
                     , streaming-with
                     , system-filepath
                     , temporary
                     , terminal-progress-bar
                     , text
                     , text-show
                     , transformers
                     , turtle
                     , unordered-containers
                     , vector
                     , vector-algorithms
                     , zlib
  ghc-options:         -O2
  default-language:    Haskell2010

executable too-many-cells
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , too-many-cells
                     , optparse-generic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/too-many-cells
