name:                too-many-cells
version:             3.0.1.0
synopsis:            Cluster single cells and analyze cell clade relationships.
description:         Different methods to cluster and analyze single cell data with diversity indices and differential expression.
homepage:            http://github.com/GregorySchwartz/too-many-cells#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gregory.schwartz@uhnresearch.ca
copyright:           2022 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TooManyCells.Classify.Classify
                     , TooManyCells.Classify.Types
                     , TooManyCells.Differential.Differential
                     , TooManyCells.Differential.Types
                     , TooManyCells.Diversity.Diversity
                     , TooManyCells.Diversity.Load
                     , TooManyCells.Diversity.Plot
                     , TooManyCells.Diversity.Types
                     , TooManyCells.File.Types
                     , TooManyCells.MakeTree.Adjacency
                     , TooManyCells.MakeTree.Clumpiness
                     , TooManyCells.MakeTree.Cluster
                     , TooManyCells.MakeTree.Load
                     , TooManyCells.MakeTree.Plot
                     , TooManyCells.MakeTree.Print
                     , TooManyCells.MakeTree.Types
                     , TooManyCells.MakeTree.Utility
                     , TooManyCells.Matrix.AtacSeq
                     , TooManyCells.Matrix.Load
                     , TooManyCells.Matrix.Preprocess
                     , TooManyCells.Matrix.Types
                     , TooManyCells.Matrix.Utility
                     , TooManyCells.Motifs.FindMotif
                     , TooManyCells.Motifs.Types
                     , TooManyCells.Paths.Distance
                     , TooManyCells.Paths.Plot
                     , TooManyCells.Paths.Types
                     , TooManyCells.Peaks.ClusterPeaks
                     , TooManyCells.Peaks.Types
                     , TooManyCells.Program.Classify
                     , TooManyCells.Program.Differential
                     , TooManyCells.Program.Diversity
                     , TooManyCells.Program.Interactive
                     , TooManyCells.Program.LoadMatrix
                     , TooManyCells.Program.MakeTree
                     , TooManyCells.Program.MatrixOutput
                     , TooManyCells.Program.Motifs
                     , TooManyCells.Program.Options
                     , TooManyCells.Program.Paths
                     , TooManyCells.Program.Peaks
                     , TooManyCells.Program.Spatial
                     , TooManyCells.Program.Utility
                     , TooManyCells.Spatial.AnnoSpat
                     , TooManyCells.Spatial.ProjectionPlot
                     , TooManyCells.Spatial.Relationships
                     , TooManyCells.Spatial.SummaryPlot
                     , TooManyCells.Spatial.Types
                     , TooManyCells.Spatial.Utility
  build-depends:       base >= 4.7 && < 5
                     , IntervalMap
                     , SVGFonts
                     , aeson
                     , async
                     , async-pool
                     , attoparsec
                     , birch-beer
                     , bytestring
                     , cassava
                     , colour
                     , containers
                     , deepseq
                     , diagrams
                     , diagrams-cairo
                     , diagrams-graphviz
                     , diagrams-lib
                     , differential
                     , directory
                     , diversity
                     , fgl
                     , filepath
                     , find-clumpiness
                     , foldl
                     , graphviz
                     , hashable
                     , hierarchical-clustering
                     , hierarchical-spectral-clustering
                     , hmatrix
                     , hmatrix-svdlibc
                     , hvega
                     , hvega-theme
                     , inline-r
                     , lens
                     , managed
                     , matrix-market-attoparsec
                     , modularity
                     , mtl
                     , mwc-random
                     , optparse-applicative
                     , palette
                     , parallel
                     , plots
                     , ploterific
                     , process
                     , resourcet
                     , safe
                     , scientific
                     , sparse-linear-algebra
                     , spectral-clustering >= 0.3.0.2
                     , split
                     , statistics
                     , stm
                     , streaming
                     , streaming-bytestring
                     , streaming-cassava
                     , streaming-commons
                     , streaming-utils
                     , streaming-with
                     , system-filepath
                     , temporary
                     , terminal-progress-bar
                     , text
                     , text-show
                     , transformers
                     , turtle >= 1.5.18
                     , unordered-containers
                     , vector
                     , vector-algorithms
                     , zlib
  -- No specConstr due to memory limitations
  ghc-options:         -O2 -fno-spec-constr
  default-language:    Haskell2010

executable too-many-cells
  hs-source-dirs:      app
  main-is:             Main.hs
  -- No specConstr due to memory limitations
  ghc-options:         -threaded -rtsopts -O2 -fno-spec-constr
  build-depends:       base
                     , too-many-cells
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/too-many-cells
